@@ -1,27 +1,27 @@
 ---
-product_name:      manageiq
+product_name: manageiq
 repos:
-  ref:             lasker
+  ref: lasker
   manageiq:
-    url:           https://github.com/ManageIQ/manageiq.git
+    url: https://github.com/ManageIQ/manageiq.git
     ref:
   manageiq_appliance:
-    url:           https://github.com/ManageIQ/manageiq-appliance.git
+    url: https://github.com/ManageIQ/manageiq-appliance.git
     ref:
   manageiq_ui_service:
-    url:           https://github.com/ManageIQ/manageiq-ui-service.git
+    url: https://github.com/ManageIQ/manageiq-ui-service.git
     ref:
 version:
 release:
 rpm:
-  version:         12.0.0
-  release:         0.1
+  version: 12.1.0
+  release: 0.2
   repo_name:
-  org_name:        manageiq
+  org_name: manageiq
   product_summary: ManageIQ Management Engine
-  product_url:     https://github.com/ManageIQ/manageiq
+  product_url: https://github.com/ManageIQ/manageiq
   changelog:
-bundler_version:   2.1.4
+bundler_version: 2.1.4
 npm_registry:
 rpm_repository:
   digitalocean_access_token:
@@ -31,15 +31,15 @@ rpm_repository:
     bucket: rpm-manageiq-org
     endpoint: nyc3.digitaloceanspaces.com
   :arches:
-    - "src"
-    - "noarch"
-    - "ppc64le"
-    - "s390x"
-    - "x86_64"
+  - src
+  - noarch
+  - ppc64le
+  - s390x
+  - x86_64
   :content:
     :12-lasker:
       :targets:
-        - el8
+      - el8
       :rpms:
         :kafka: !ruby/regexp /.+-2\.3.+/
         :manageiq: !ruby/regexp /.+-12\.\d\.\d-\d(\.\d\.(alpha|beta|rc)\d(\.\d)?)?\.el.+/
@@ -54,6 +54,6 @@ rpm_repository:
         :wmi: !ruby/regexp /.+-1\.3\.14.+/
     :12-lasker-nightly:
       :targets:
-        - el8
+      - el8
       :rpms:
         :manageiq-nightly: !ruby/regexp /.+-12\.\d\.\d-\d\.\d\.\d+\.el.+/
