@@ -1,3 +1,6 @@
 %changelog
+* Tue Apr 20 2021 ManageIQ <contact@manageiq.org> - 12.1.0-0.2.beta1
+- Lasker 1 Beta1 build
+
 * Tue Oct 27 2020 Satoe Imaishi <simaishi@redhat.com> - 12.0.0-1
 - master branch build
